Add radio button for color type and initial imple of play and reset

--- a/html/devtools.html
+++ b/html/devtools.html
@@ -21,6 +21,24 @@
       <p></p>
     </details>
    </div>
+   <div id="color-contrast-radioContainer" class="color-contrast-radioContainer">
+    <div class="color-contrast-radio-element">
+      <input type="radio" id="text-color" name="contrast-against" value="text-color" checked>
+      <label for="text-color">Text Color</label>
+    </div>
+    <div class="color-contrast-radio-element">
+      <input type="radio" id="text-border" name="contrast-against" value="text-border">
+      <label for="text-border">Text Border</label>
+    </div>
+    <div class="color-contrast-radio-element">
+      <input type="radio" id="element-border" name="contrast-against" value="element-border">
+      <label for="element-border">Element Border </label>
+    </div>
+   </div>
+   <div class="contrast-color-display-container">
+    <div id="contrast-color-display" aria-labelledby="contrast-color-display-label"></div>
+    <div id="contrast-color-display-label" class="f1"></div>
+   </div>
   </body>
   <script src="../js/devtools.js"></script>
 </html>
