--- a/html/devtools.html
+++ b/html/devtools.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../css/common.css">
-    <link rel="stylesheet" type="text/css" href="../css/devtools.css">
-  </head>
-  <body class="bgColor">
-    <div class="button-container">
-      <button class="reset">Reset</button>
-      <button class="play">Play</button>
-   </div>
-   <div class="marker">
-    <label for="marker">Marker Gap</label>
-    <input name="marker" class="marker-input" type="number"  value='15'/>
-   </div>
-   <div>
-    <h1 class="f2">Element</h1>
-    <details class="element-selected">
-      <summary></summary>
-      <p></p>
-    </details>
-   </div>
-   <div id="color-contrast-radioContainer" class="color-contrast-radioContainer">
-    <div class="color-contrast-radio-element">
-      <input type="radio" id="text-color" name="contrast-against" value="text-color" checked>
-      <label for="text-color">Text Color</label>
-    </div>
-    <div class="color-contrast-radio-element">
-      <input type="radio" id="text-border" name="contrast-against" value="text-border">
-      <label for="text-border">Text Border</label>
-    </div>
-    <div class="color-contrast-radio-element">
-      <input type="radio" id="element-border" name="contrast-against" value="element-border">
-      <label for="element-border">Element Border </label>
-    </div>
-   </div>
-   <div class="contrast-color-display-container">
-    <div id="contrast-color-display" aria-labelledby="contrast-color-display-label"></div>
-    <div id="contrast-color-display-label" class="f1"></div>
-   </div>
-  </body>
-  <script src="../js/devtools.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" type="text/css" href="../css/common.css" />
+        <link rel="stylesheet" type="text/css" href="../css/devtools.css" />
+    </head>
+    <body class="bgColor">
+        <div class="button-container">
+            <button class="reset">Reset</button>
+            <button class="play">Play</button>
+        </div>
+        <div class="marker">
+            <label for="marker">Marker Gap</label>
+            <input name="marker" class="marker-input" type="number" value="15" />
+        </div>
+        <div>
+            <h1 class="f2">Element</h1>
+            <details class="element-selected">
+                <summary></summary>
+                <p></p>
+            </details>
+        </div>
+        <div id="color-contrast-radioContainer" class="color-contrast-radioContainer">
+            <div class="color-contrast-radio-element">
+                <input
+                    type="radio"
+                    id="text-color"
+                    name="contrast-against"
+                    value="text-color"
+                    checked
+                />
+                <label for="text-color">Text Color</label>
+            </div>
+            <div class="color-contrast-radio-element">
+                <input type="radio" id="text-border" name="contrast-against" value="text-border" />
+                <label for="text-border">Text Border</label>
+            </div>
+            <div class="color-contrast-radio-element">
+                <input
+                    type="radio"
+                    id="element-border"
+                    name="contrast-against"
+                    value="element-border"
+                />
+                <label for="element-border">Element Border </label>
+            </div>
+        </div>
+        <div class="contrast-color-display-container">
+            <div id="contrast-color-display" aria-labelledby="contrast-color-display-label"></div>
+            <div id="contrast-color-display-label" class="f1"></div>
+        </div>
+    </body>
+    <script src="../js/devtools.bundle.js"></script>
 </html>
