Display hovered marker point data

--- a/html/devtools.html
+++ b/html/devtools.html
@@ -50,6 +50,27 @@
             <div id="contrast-color-display" aria-labelledby="contrast-color-display-label"></div>
             <div id="contrast-color-display-label" class="f1"></div>
         </div>
+        <div id="hovered-marker-section">
+            <h2 class="f2">Hovered Marker Point</h2>
+            <div id="hovered-info-container">
+                <div class="hovered-info-row">
+                    <div>Background Color</div>
+                    <div id="hovered-bgColor"></div>
+                </div>
+                <div class="hovered-info-row">
+                    <div>Contrast</div>
+                    <div id="hovered-contrast-ratio"></div>
+                </div>
+                <div class="hovered-info-row">
+                    <div>AA</div>
+                    <div id="hovered-aa"></div>
+                </div>
+                <div class="hovered-info-row">
+                    <div>AAA</div>
+                    <div id="hovered-aaa"></div>
+                </div>
+            </div>
+        </div>
     </body>
     <script src="../js/devtools.bundle.js"></script>
 </html>
