add spectrum graph with threshold lines logic

--- a/html/devtools.html
+++ b/html/devtools.html
@@ -71,6 +71,8 @@
                 </div>
             </div>
         </div>
+        <canvas class="contrast-graph">
+        </canvas>
     </body>
     <script src="../js/devtools.bundle.js"></script>
 </html>
