add average contrast ratio

--- a/html/devtools.html
+++ b/html/devtools.html
@@ -71,8 +71,12 @@
                 </div>
             </div>
         </div>
-        <canvas class="contrast-graph">
+        <canvas class="contrast-graph" height="300" width="508">
         </canvas>
+        <div id="average-contrast-ratio-container">
+            <div class="f2">Average Contrast Ratio</div>
+            <div id="average-contrast-ratio"></div>
+        </div>
     </body>
     <script src="../js/devtools.bundle.js"></script>
 </html>
