Add bounding box for average contrast ratio calculation

--- a/html/devtools.html
+++ b/html/devtools.html
@@ -81,7 +81,10 @@
         <canvas class="contrast-graph" height="300" width="508" tabindex="0" role="img" aria-label="Interactive data visualization">
         </canvas>
         <div id="average-contrast-ratio-container">
-            <div class="f2">Average Contrast Ratio</div>
+            <div>
+                <div class="f2">Average Contrast Ratio</div>
+                <div id="bounding-box-dimensions"></div>
+            </div>
             <div id="average-contrast-ratio"></div>
         </div>
     </body>
